{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 19,
  "lineage": "1f19afc0-ba1b-38b0-527f-9f6e125fd23d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a420bd96b5b4fb0f",
            "association_id": "eipassoc-0fce45adc9cf6abde",
            "domain": "vpc",
            "id": "eipalloc-0a420bd96b5b4fb0f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c78d10c3abd74891",
            "private_dns": "ip-10-0-1-237.eu-central-1.compute.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-18-199-227-35.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.199.227.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:internet-gateway/igw-0bca507d74ff54a9f",
            "id": "igw-0bca507d74ff54a9f",
            "owner_id": "209664480759",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a420bd96b5b4fb0f",
            "association_id": "eipassoc-0fce45adc9cf6abde",
            "connectivity_type": "public",
            "id": "nat-0668d831b6b8cb867",
            "network_interface_id": "eni-0c78d10c3abd74891",
            "private_ip": "10.0.1.237",
            "public_ip": "18.199.227.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08bd1980f258ce9e7",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_gateway",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:route-table/rtb-03fcf4a47b06acbad",
            "id": "rtb-03fcf4a47b06acbad",
            "owner_id": "209664480759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0668d831b6b8cb867",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:route-table/rtb-03216a694129c1b93",
            "id": "rtb-03216a694129c1b93",
            "owner_id": "209664480759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bca507d74ff54a9f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d858f284f4485b62",
            "route_table_id": "rtb-03fcf4a47b06acbad",
            "subnet_id": "subnet-078ff03c451285805"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.my_private_subnet_1",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb0531e43c70baa",
            "route_table_id": "rtb-03fcf4a47b06acbad",
            "subnet_id": "subnet-089cb94dc63dcb871"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.my_private_subnet_2",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fd8840432da13d7",
            "route_table_id": "rtb-03216a694129c1b93",
            "subnet_id": "subnet-08bd1980f258ce9e7"
          },
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1fc3fa851d2692d",
            "route_table_id": "rtb-03216a694129c1b93",
            "subnet_id": "subnet-081d505627a71f2f3"
          },
          "dependencies": [
            "aws_internet_gateway.my_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:subnet/subnet-078ff03c451285805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078ff03c451285805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209664480759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_1"
            },
            "tags_all": {
              "Name": "my_private_subnet_1"
            },
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:subnet/subnet-089cb94dc63dcb871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089cb94dc63dcb871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209664480759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_2"
            },
            "tags_all": {
              "Name": "my_private_subnet_2"
            },
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:subnet/subnet-08bd1980f258ce9e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bd1980f258ce9e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209664480759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_1"
            },
            "tags_all": {
              "Name": "my_public_subnet_1"
            },
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:subnet/subnet-081d505627a71f2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d505627a71f2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209664480759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_2"
            },
            "tags_all": {
              "Name": "my_public_subnet_2"
            },
            "vpc_id": "vpc-045fddd5113c9f730"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:209664480759:vpc/vpc-045fddd5113c9f730",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090231ad4e71c7566",
            "default_route_table_id": "rtb-0a11d346720b21eb7",
            "default_security_group_id": "sg-01b6b53800844aad3",
            "dhcp_options_id": "dopt-06c198fa024d83d75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045fddd5113c9f730",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a11d346720b21eb7",
            "owner_id": "209664480759",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}